# gracroverse-server

./: Cargo.toml
adapter/: Cargo.toml
application/: Cargo.toml
domain/: Cargo.toml
driver/: Cargo.toml  config.yml
driver/src/: config.rs  lib.rs  startup.rs
driver/src/model/: activitypub.rs
driver/src/modules/: mod.rs  repositories.rs
driver/src/routes/: ap.rs
