[package]
name = "gracroverse-server-driver"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.58"
axum = "0.6.1"
bytes = { version = "1.3.0", features = ["serde"] }
config = { version = "0.13.2", features = ["yaml"] }
gracroverse-server-adapter = { path = "../adapter" }
gracroverse-server-application = { path = "../application" }
gracroverse-server-domain = { path = "../domain" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.89"
serde_with = "2.1.0"
shaku = { version = "0.6.1", features = ["derive", "thread_safe"] }
shaku_axum = "0.3.0"
tokio = { version = "1.22.0", features = ["rt-multi-thread", "macros"] }
tower = "0.4.13"
tower-http = { version = "0.3.5", features = ["trace", "request-id"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
